cmake_minimum_required (VERSION 3.13)

#set(TARGET_NAME otosRcpp)

#setup_component(TARGET ${TARGET_NAME})

#file(GLOB_RECURSE TARGET_HEADERS "*.h")
#file(GLOB_RECURSE TARGET_SOURCES "*.cpp")

#add_library(
#    ${TARGET_NAME} SHARED
#    ${TARGET_HEADERS}
#    ${TARGET_SOURCES}
#)

#install_library(TARGET ${TARGET_NAME})
